--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.13",
     "bootstrap": "^5.1.1",
     "cra-template": "1.1.2",
+    "graphql": "^15.6.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
