--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 REACT_APP_GIT_CLIENT_SECRET=30f5335b91f6858e87c76cbd8c8509c67990ae97
 REACT_APP_GIT_CLIENT_ID=f0c08d8ebef248c991a5
 REACT_APP_GIT_GRAPHQL_URL=https://api.github.com/graphql
+REACT_APP_AUTH_API_URL=http://localhost:8081
